# server.js
@@ -8,33 +8,24 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger-output.json');
 const path = require('path');
 
-
 const app = express();
 const PORT = process.env.PORT || 5000;
-const  HOST = process.env.HOST || '95.130.227.93';
+const HOST = process.env.HOST || '95.130.227.93';
 
 // Middleware
 app.use(express.json());
 
-const corsOptions = {
-    origin: ['http://paygo.app-center.uz', 'https://paygo.app-center.uz', 'http://localhost:3000'],
+app.use(cors({
+    origin: '*', // Barcha domenlarga ruxsat berish
     methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS'],
     allowedHeaders: ['Content-Type', 'Authorization'],
-    credentials: true, // Cookie va autentifikatsiya ma'lumotlari uchun
-};
-app.use(cors(corsOptions));
+}));
+
 
 // PostgreSQL ulanishi
 connectDB();
 
 app.use(express.static(path.join(__dirname, 'public')));
-
-
-app.get('/', (req, res) => {
-    res.sendFile(path.join(__dirname, 'index.html'));
-});
-
-
 
 const ipFilterMiddleware = (allowedIPs) => (req, res, next) => {
     // IP manzilni olish
@@ -55,15 +46,32 @@ const ipFilterMiddleware = (allowedIPs) => (req, res, next) => {
     next();
 };
 
+
 // Swagger UI faqat ruxsat berilgan IP'lar uchun
 const allowedIPsForSwagger = ['10.100.26.2', '195.158.24.85']; // Swagger uchun ruxsat berilgan IP'lar
-app.use('/docs', ipFilterMiddleware(allowedIPsForSwagger), cors(corsOptions), swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/docs', ipFilterMiddleware(allowedIPsForSwagger),  swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+// Foydalanuvchi uchun asosiy sahifa (agar kerak bo'lsa)
+app.get('/', (req, res) => {
+    res.sendFile(path.join(__dirname, 'index.html'));
+});
+
+
+// Middleware: faqat /services/zyber/api bilan boshlanmagan so‘rovlarni 404.html sahifasiga yo'naltirish
+app.use((req, res, next) => {
+    if (!req.path.startsWith('/services/zyber/api')) {
+        return res.status(404).sendFile(path.join(__dirname, '404.html'));
+    }
+    next();
+});
 
 // Auth yo'llarini ulash
 app.use('/services/zyber/api/auth', authRoutes);
 
 // Himoyalangan yo'llar
 app.use('/services/zyber/api/users', userRoutes);
+
+
 
 // Serverni ishga tushirish
 app.listen(PORT, () => console.log(`Server running on http://${HOST}:${PORT}`));
